--- a/src/app/ui/signin/signin.component.html
+++ b/src/app/ui/signin/signin.component.html
@@ -49,7 +49,7 @@
                             </form>
                         </div>
                     </div>
-                    <p class="text-center p-2">New to Website?&nbsp;<a routerLink="/signup">Sign up</a></p>
+                    <p class="text-center p-2">New to FreshTrace?&nbsp;<a routerLink="/signup">Sign up</a></p>
                 </div>
 
 
